--- a/estilosCss/pagina.css
+++ b/estilosCss/pagina.css
@@ -1,8 +1,5 @@
-*{
-    margin: 0px;
-}
 header{
-    background-color: rgb(0, 0, 0);
+    background-color: #000000;
 }
 .imagens1{
     display: flex;
@@ -12,14 +9,6 @@ header{
     opacity: 0.8;
     float: left;
 } 
-.barraPesquisa{
-    width: 300px;
-    position: relative; 
-    left: 80%;
-    top: 100%;
-    border-radius: 20px;
-
-}   
 ul{
     list-style: none;
 }
@@ -27,21 +16,24 @@ ul{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    height: 10px;
-    padding: 10px;
+    gap: 40px;
+    height: 15px;
+    padding: 5px;
     margin-top: 10px;
-
 }
 .botoes{
     background: linear-gradient(to right, #EDEDED, #BDBDBD);
     color: white;
-    font-size: 15px;
+    font-size: 12px;
     cursor: pointer;
     padding: 10px;
     border-radius: 10px;
     height: 25px;
+    width: 180px;
     cursor: pointer;
+    position: relative;
+    top: -20px;
+    transition: background-color 0.3s ease;
 }
 li{
     text-align: center;
@@ -55,9 +47,36 @@ li{
     display: flex;
     align-items: center;
 }
-.botoes img{
-    height: 15px;
-    width: 100px;
-    object-fit: contain;
-    opacity: 0.8;
+.sobre{
+    position: relative;
+    right: 65px;
+    top: -19px;
+}
+.contato{
+    position: relative;
+    right: 88px;
+    top: -19px;
+}
+.produtos{
+    position: relative;
+    right: 92px;
+    top: -19px;
+}
+.redes{
+    position: relative;
+    right: 125px;
+    top: -19px;
+}
+footer {
+      color: #fff;
+      text-align: center;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 50px;
+      background: #000000;
+      line-height: 50px;
+    }
+btn::btn-outline-secondary{
+    
 }
